# PBL4_Client

./: .gitignore  App.config  PBL4_Client.spec  README.md  app.py  crypto_config.py  full_hash.schema  setup.py  vcpkg.json
Client/Controller/: AutostartController.py  HashController.py  HistoryController.py  QuarantineManagerController.py  RealtimeProtectionController.py  ScanController.py  SetupController.py  YaraScannerController.py  file_sending.py
Client/Model/: HashModel.py  HistoryModel.py  QuarantineManagerModel.py  ScanResultList.py  SetupModel.py  UpdateModel.py  YaraScannerModel.py  file_sender.py  memory_scan.py  yara_py.py  yaratest.py
Client/UI/: generate_script.py  history.py  loading_ui.py  main_ui.py  real_time_scanning.py  realtime_protection.py  scan_options.py  scanning.py  statistics.py
Encrypt/: client.cpp  gen_dh_params.cpp  server.cpp
Server/: server_main.py
Server/received_files/192_168_0_10/: log.txt
cpp_extension/: CMakeLists.txt  YaraScanner.cpp  YaraScanner.h  bindings.cpp
cpp_extension/QuarantineManager/: CMakeLists.txt  QuarantineManager.cpp  QuarantineManager.h  bindings.cpp
cpp_extension/YaraScanner/: CMakeLists.txt  YaraScanner.cpp  YaraScanner.h  bindings.cpp
